docs/src/components/Document/index.scss
@import '../../assets/styles/variables.scss';
@import '../../assets/styles/highlight.scss';
@import '../../assets/styles/admonition.scss';
@import '../../assets/styles/grid.scss';


.documentWrapper {
    width: calc(100% - #{$docmap-width-desktop});
    color: var(--primary-color);
    padding-left: $document-padding;
    

    .documentView {
        min-height: 75vh;
        padding: $padding-md $padding-md 0;
    }

    /* In order to hide TOC in main component */
    #toc {
        display: none;
    }

    h1 {
        margin-top: $title-margin;
    }

    p {
        font-weight: $font-weight-normal;
        font-size: $font-size-doc;
        line-height: $line-height-doc;

        code {
            background: var(--code-block-color);
            font-family: $font-family-code;
            a {
                color: var(--primary-color);
            }
        }
    }

    .image img {
        width: auto;
    }

    img {
        width: 100%;
        
        
    }

    pre {
        white-space: pre-wrap;
        background: var(--code-block-color);
        padding: 20px 10px;
        display: flex;
        font-family: $font-family-code;
        justify-content: space-between;
        overflow: auto;
        font-size: $font-size-code;
        line-height: $line-height-code;
        box-shadow: var(--box-shadow);

    }

    pre.highlight {
        &:hover {
            .wrapperContainer {
                visibility: visible;
               
            }
        }

        code {
            max-width: 100%;
            font-family: $font-family-code;
        }

        .wrapperContainer {
            max-width: 15%;
            position: relative;
            visibility: hidden;
            padding: 20px;

            .lang {
                position: absolute;
                top: -15px;
                right: 36px;
                text-transform: uppercase;
                color: var(--text-color-code-lang);
            }

            .copyButton {
                position: absolute;
                top: -15px;
                right: 0px;
                border: 0;
                background: transparent;

                img {
                    width: 15px;
                }
            }

            .tooltip {
                position: absolute;
                top: 15px;
                right: -8px;
            }
        }
    }

    #preview-in-playground {
        background: var(--secondary-color);
        color: $white;
        font-size: $font-size-normal;
        font-weight: $font-weight-normal;
        border: 0;
        padding: $preview-padding;
        border: 0;
        border-radius: $preview-border-radius;
        margin-bottom: $preview-margin-bottom;
        display: inline-block;
        height: $preview-height;
    }

    table {
        border-spacing: 0;
        border-collapse: collapse;
       

        th {
            border-bottom: 3px solid var(--border-color);
            font-size: $font-size-doc;
            padding: 5px $padding-md $padding-sm $padding-sm;
            text-align: left;
        }

        td {
            font-size: $font-size-table;
            border-bottom: 1px solid var(--border-color-tr);
            padding: 5px $padding-md $padding-sm $padding-sm;
            font-weight: $font-weight-normal;
            text-align: left;

            p {
                font-size: $font-size-table;
            }
        }

        tr {
            border-bottom: 1px solid var(--border-color-tr);
        }
    }



    h2 {
        margin-top: $margin-lg;
        padding-bottom: $padding-sm;
        border-bottom: 1px solid var(--border-color);
        font-size:$font-size-h2;
        font-weight: $font-weight-normal;
    }

    h3 {
        margin-top: $sub-title-margin;
        font-size: $font-size-h3;
        font-weight: $font-weight-normal;
    }

    h4 {
        font-size: $font-size-h4;
        margin-top: $sub-title-margin;
        font-weight: $font-weight-normal;
    }

    h5 {
        font-size: $font-size-h5;
        margin-top: $sub-title-margin-h5;
        margin-bottom: $sub-title-margin-h5;
        font-weight: $font-weight-bold;
        color: var(--primary-color);
    }
    
    ol > li {
        &::marker {
            font-weight: $font-weight-normal;

        }

        & > p {
            margin-left: 3px;
        }
    }
 
    ul > li {
        &::marker {
            font-weight: $font-weight-normal;

        }

        & > p {
            margin-left: 3px;
        }
    }
 

    .hdlist {
        tr,
        th,
        td {
            border: none;
        }

        .hdlist1 {
            font-weight: $font-weight-bold;
        }

        td {
            font-size: $font-size-doc;

            p {
                font-size: $font-size-doc;
            }
        }
    }

    .hdlist1 {
        font-size: $font-size-doc;
    }

    .admonitionblock {
        tr,
        th,
        td {
            border: none;
        }
    }

    .dlist {
        dd {
            margin-bottom: $margin-links;
        }
    }

    .ulist {
        ul {
            padding-inline-start: $padding-sm;
            
            
        }
    }


    .admonitionblock {
        code {
            font-family: $font-family-code;
        }
    }

    .copyIcon {
        height: $icon-width;
        width: $icon-height;
    }

    a,
    a:active {
        color: var(--secondary-color);
    }
}

hr {
    border-color: var(--border-color);
}

pre {
    white-space: pre-wrap;
}


@media screen and (min-width: $tablet-resolution-min) and (max-width: $tablet-resolution-max) {
    .documentWrapper {
        width: calc(100% - #{$docmap-width-tablet});
    }
}

@media screen and (max-width: $mobile-resolution-max) {
    .documentWrapper {
        width: 100%;
        overflow-x: auto;

        pre {
            overflow-x: auto;
        }
    }
}

